All tests done and readme updated